--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@ coverage
 log/*.log
 pkg/
 .sass-cache
-spec/dummy/db/*.sqlite3
-spec/dummy/log/*.log
-spec/dummy/tmp/
-spec/dummy/.sass-cache
+dummy/db/*.sqlite3
+dummy/log/*.log
+dummy/tmp/
+dummy/.sass-cache
 *.tmproj
 tmp/*
 .yardoc
